kie-kogito-apps-2026: Improvements on the Job Service start-up and periodic jobs loading procedure (#2038)